using UnityEngine;public class Enemy_Animation_LouieWilliamson : M{Animator q;Vector2 w;float e;float r;bool t;public void Q(){q.SetTrigger("isAttacking");}void Start(){q = GetComponentInChildren<Animator>();w = transform.position;t = true;}void Update(){e = w.x - transform.position.x;r = w.y - transform.position.y;if (r > 0){q.SetBool("isFacing", true);}else if (r < 0){q.SetBool("isFacing", false);}if (e < 0){if (!t){u();t = true;}}else if (e > 0){if (t){u();t = false;}}if (e == 0 && r == 0){q.SetTrigger("isIdle");}else {q.SetTrigger("isMoving");}w = transform.position;}void u(){transform.localScale = new Vector3(transform.localScale.x * -1, transform.localScale.y, transform.localScale.z);}}